--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"node server\"",
-    "build": "react-scripts build",
+    "build": "concurrently \"react-scripts build\" \"node server\"",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
