--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "concurrently \"react-scripts build\" \"node server\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build && npm start"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
